Fixed word wrap

--- a/styles/style.css
+++ b/styles/style.css
@@ -296,7 +296,6 @@ ul.guessBox {
 	border-bottom-right-radius: 4px;
 	color: #fff;
 	word-wrap: break-word;
-	overflow-wrap: break-word;
 }
 
 ul.guessBox li {
